styles/globals.css
:root {
  --body-bg-color: #fff;
  --body-color: #000;
  --link-color: #00e;
  --link-visited-color: #551a8b;
  /* --body-bg-color: #1A202C;
  --body-color: #FFF;
  --link-color: #FFC400;
  --link-visited-color: #C27DC0; */
}

body {
  background-color: var(--body-bg-color);
  color: var(--body-color);
  display: flex;
  flex-direction: column;
  align-items: center;
  flex-wrap: wrap;
  padding: 0 1em;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

* {
  box-sizing: border-box;
}

details {
  margin: 1em;
}

details > div {
  padding-left: 1em;
}

details > summary {
  margin-bottom: 1em;
}

a {
  color: var(--link-color);
}

details a {
  color: var(--link-visited-color);
}

header,
main,
footer {
  max-width: 60ch;
}

footer,
section {
  margin: 1em auto;
}

h1 {
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

h3 {
  display: flex;
  align-items: center;
  gap: 0.5em;
}

h3 button {
  display: none;
}

h3:hover button {
  display: inline-block;
}

button {
  margin: auto 0.5em;
}

form {
  display: flex;
}

input[type="text"] {
  flex: 1;
  margin: auto 0.5em;
}

span {
  color: #ee802f;
}

p {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

dialog {
  position: fixed;
  top: 50%;
  background-color: var(--body-bg-color);
  color: var(--body-color);
}

main ul {
  padding: 0;
}

main li {
  display: flex;
  list-style-type: none;
}

main li span {
  flex: 0 0 7rem; 
}

